--- a/src/css/components/myPage/applicationWork.module.css
+++ b/src/css/components/myPage/applicationWork.module.css
@@ -19,10 +19,32 @@
 }
 .body {
   /* height: 400px; */
-  border-bottom-left-radius: 16px;
-  border-bottom-right-radius: 16px;
-  padding: 40px 70px;
+  /* border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px; */
+  /* padding: 40px 70px; */
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 20px; */
+}
+.itemContainer {
+  /* background-color: red; */
+  height: 150px;
+  padding: 0 60px 0 30px;
+  border-bottom: 2.5px solid #d9d9d9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.itemTitle {
+  font-size: 25px;
+  font-weight: 500;
+}
+.price {
+  font-size: 25px;
+  font-weight: 700;
+  color: #5290ff;
+}
+.date {
+  font-size: 20px;
+  font-weight: 400;
 }
