--- a/src/css/components/globalLayout/footer.module.css
+++ b/src/css/components/globalLayout/footer.module.css
@@ -1,27 +1,27 @@
 .container {
   background-color: #808080;
   width: 100%;
-  height: 300px;
-  margin-top: 20px;
-  display: flex;
-  /* justify-content: center; */
-  position: relative;
+  height: 420px;
 }
 
 .contentDiv {
-  width: 60%;
-  position: relative;
+  width: 90%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  margin: 40px 0 0 100px;
 }
-.contentDiv > span {
+
+.text {
+  font-size: 16px;
+  font-weight: 300;
   color: #d9d9d9;
-  font-weight: lighter;
-  position: absolute;
-  bottom: 20px;
-  left: 40px;
+  margin-bottom: 5px;
   line-height: 2;
 }
-.logoDiv {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+.textDiv {
+  width: 1100px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
 }
