--- a/src/css/components/jobPost/postField4.module.css
+++ b/src/css/components/jobPost/postField4.module.css
@@ -1,39 +1,40 @@
 .postFieldContainer {
   width: 100%;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-top: 34px;
-  padding-bottom: 34px;
+
+  padding: 34px 66px;
   background-color: #f5f6f8;
-  border: none;
   border-radius: 10px;
 }
 
 .fieldTitle {
   font-size: 32px;
   font-weight: bold;
-  padding-left: 66px;
-  padding-right: 66px;
   color: #000;
 }
 
 .fieldBox {
   width: 100%;
-  height: 228px;
+  box-sizing: border-box;
+  background: #fff;
   border-radius: 10px;
-  padding: 0px 41px 0px 66px;
+  padding: 24px;
 }
 
 .textarea {
-  width: 881px;
-  height: 188px;
+  width: 100%;
+  min-height: 228px;
+  display: block;
+  box-sizing: border-box;
   border: none;
   border-radius: 10px;
-  padding: 20px 24px;
+  padding: 16px 18px;
   font-size: 21px;
   resize: none;
-  font-family: none;
+  font-family: inherit;
 }
 
 .textarea::placeholder {
