--- a/src/css/components/myPage/profile.module.css
+++ b/src/css/components/myPage/profile.module.css
@@ -121,7 +121,8 @@
   flex: 7;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 20px;
+  /* justify-content: space-between; */
 }
 
 .profileInformation label {
