--- a/src/css/components/myPage/registedIlKan.module.css
+++ b/src/css/components/myPage/registedIlKan.module.css
@@ -2,17 +2,23 @@
   margin-top: 80px;
   width: 100%;
 }
+.header {
+  margin-bottom: 20px;
+}
 .header span {
   font-size: 40px;
   font-weight: 500;
 }
 .body {
   width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
 }
 .itemDiv {
   background-color: #f5f6f8;
-  height: 390px;
-  width: 30%;
+  height: 410px;
+  /* width: 30%; */
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -20,6 +26,7 @@
 .itemHeader {
   height: 190px;
   background-color: #d9d9d9;
+  padding: 10px;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
@@ -47,4 +54,52 @@
 }
 .itemPrice span {
   color: #5290ff;
+}
+
+.addDiv {
+  height: 410px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f6f8;
+}
+.addDiv span {
+  font-size: 25px;
+  color: #092f63;
+  font-weight: 500;
+  height: 100px;
+  /* background-color: red; */
+}
+.aiDiv {
+  height: 410px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #91c0ff;
+}
+.aiDiv span {
+  font-size: 25px;
+  color: #092f63;
+  font-weight: 500;
+}
+/* .aiDiv img {
+  margin-bottom: 40px;
+} */
+.textDiv {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  /* justify-content: center; */
+  align-items: center;
+  /* background-color: red; */
+}
+.aiDiv img,
+.addDiv img {
+  height: 120px;
+  width: 120px;
+  margin-bottom: 30px;
 }
