--- a/src/css/pages/jobPostPage.module.css
+++ b/src/css/pages/jobPostPage.module.css
@@ -3,8 +3,12 @@
 }
 
 .header {
+  display: flex;
+  align-items: center;
   font-size: 40px;
   font-weight: bold;
+  margin-bottom: 8px;
+  height: 80px;
 }
 
 .formContainer {
